web-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-one
  template:
    metadata:
      labels:
        app: web-one
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-one-service
spec:
  type: ClusterIP
  selector:
    app: web-one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
