ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: internal.org
      http:
        paths:
        - backend:
          service:  
          name: web-two
          port:
            number: 80
        path: /
        pathType: ImplementationSpecific
    - host: www.external.com
      http:
        paths:
          - backend:
              service:
                name: web-one
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
